# graphql

./: README.md  pyproject.toml
go-api/: app.go  client.html  go.mod
graphql/: publish.py  subscribe.py
graphql-py/: subscribe.py
python-api/: app.py
